--- a/src/app/seed-app.html
+++ b/src/app/seed-app.html
@@ -3,6 +3,7 @@
 	<a [routerLink]="['/Home']">Home</a>
 	<a [routerLink]="['/About']">About</a>
 	<a [routerLink]="['/RepoBrowser/RepoList', {org: 'angular'}]">Github Repos</a>
+  <a [routerLink]="['/TaskBrowser/TaskList', {org: 'google'}]">Orders</a>
 </div>
 <div>
 	<router-outlet></router-outlet>
