--- a/src/app/seed-app.html
+++ b/src/app/seed-app.html
@@ -1,10 +1,30 @@
-<h3>Angular2 Seed</h3>
-<div>
-	<a [routerLink]="['/Home']">Home</a>
-	<a [routerLink]="['/About']">About</a>
-	<a [routerLink]="['/RepoBrowser/RepoList', {org: 'angular'}]">Github Repos</a>
-  <a [routerLink]="['/TaskBrowser/TaskList', {org: 'google'}]">Orders</a>
+<header>
+  <div>
+      <input type="search" name="googlesearch">
+      <button type="submit">Search Orders</button>
+      <a [routerLink]="['/MyOrders']">My Orders</a>
+      <a [routerLink]="['/UserAccount']">Leads</a>
+      <a [routerLink]="['/Notes']">Dashboard</a>
+      <a [routerLink]="['/Products']">History</a>
+      <a [routerLink]="['/Customers']">Settings</a>
+  </div>
+</header>
+
+<div class="left-sidebar">
+  <h3>Order App</h3>
+  <img class="logo" src="app/images/logo.jpg">
+  <h3>Comfort Agencies</h3>
+  <img src="app/images/profile.png">
+  <ul>
+    <li><a [routerLink]="['/MyOrders']">My Orders</a></li>
+    <li><a [routerLink]="['/UserAccount']">User Account</a></li>
+    <li><a [routerLink]="['/Notes']">Notes</a></li>
+    <li><a [routerLink]="['/Products']">Products</a></li>
+    <li><a [routerLink]="['/Customers']">Customers</a></li>
+    <li><a [routerLink]="['/LogOut']">Log Out</a></li>
+  </ul>
 </div>
-<div>
-	<router-outlet></router-outlet>
+
+<div class="orders">
+  <router-outlet></router-outlet>
 </div>
