--- a/src/app/components/myOrders/myOrders.html
+++ b/src/app/components/myOrders/myOrders.html
@@ -1,73 +1,78 @@
 <div class="orders">
   <h3>Orders</h3>
-<div> Sort By:
-  <select>
-    <option value="" class="" selected="selected">Select Sort Option:</option>
-    <option value="" label="Company Name">Company Name</option>
-    <option value="" label="Delivery Date">Delivery Date</option>
-    <option value="" label="Order Date">Order Date</option>
-    <option value="" label="Lead Type">Lead Type</option>
-    <option value="" label="Order Status">Order Status</option>
-  </select>
-</div>
-
-<div>
-  <md-content>
-    <md-list>
-      <md-list-item class="md-3-line" *ngFor="#item of orders">
-        <div class="md-list-item-text" layout="column">
-          <span (click)="displayDetails(item)">{{ item.companyName }}</span>
-          <span>{{ item.orderDetails }}</span>
-          <span>{{ item.orderDate }}</span>
-          <span>{{ item.orderType }}</span>
-          <span>{{ item.status }}</span><md-divider></md-divider>
-        </div>
-      </md-list-item>
-<!--      <table>
-        <tr class="title-lebel">
-          <td>Company Name</td>
-          <td>Order Details</td>
-          <td>Order Date</td>
-          <td>Deadline</td>
-        </tr>
-        <tr *ngFor="#item of orders">
-          <a><td>{{item.productName}}</td>
-          <td>{{item.brand}}</td>
-          <td>{{item.Variant}}</td>
-          <td>{{item.availability}}</td></a>
-        </tr>
-      </table>-->
-<!--      <div class="row">
-
-
-      </div>-->
-    </md-list>
-  </md-content>
-</div>
-
-<div *ngIf="selectedItem">
-  <h2>{{selectedItem.companyName}} order details :</h2>
-  <div><label>Order type: </label>{{selectedItem.orderType}}</div>
-  <div>
-    <label>Order Details: </label> {{selectedItem.orderDetails}}
+  <div> Sort By:
+    <select>
+      <option value="" class="" selected="selected">Select Sort Option:</option>
+      <option value="" label="Company Name">Company Name</option>
+      <option value="" label="Delivery Date">Delivery Date</option>
+      <option value="" label="Order Date">Order Date</option>
+      <option value="" label="Lead Type">Lead Type</option>
+      <option value="" label="Order Status">Order Status</option>
+    </select>
   </div>
-</div>
+
+  <div>
+    <md-content>
+      <md-list>
+        <md-list-item class="md-3-line" *ngFor="#item of orders">
+          <div class="md-list-item-text" layout="column">
+            <span (click)="displayDetails(item)">{{ item.companyName }}</span>
+            <span>{{ item.orderDetails }}</span>
+            <span>{{ item.orderDate }}</span>
+            <span>{{ item.orderType }}</span>
+            <span>{{ item.status }}</span><md-divider></md-divider>
+          </div>
+        </md-list-item>
+
+      </md-list>
+    </md-content>
+  </div>
+
+  <div *ngIf="selectedItem">
+    <h2>{{selectedItem.companyName}} order details :</h2>
+    <div><label>Order type: </label>{{selectedItem.orderType}}</div>
+    <div>
+      <label>Order Details: </label> {{selectedItem.orderDetails}}
+    </div>
+  </div>
 </div>
 
 <div class="tableClass">
   <h3>Products</h3>
-    <table>
-      <tr class="title-labrl">
-        <td><b>Product Name</b></td>
-        <td><b>Brand Name</b></td>
-        <td><b>Variant</b></td>
-        <td><b>Availability</b></td>
-      </tr>
-      <tr *ngFor="#item of allProducts">
-        <td>{{item.productName}}</td>
-        <td>{{item.brand}}</td>
-        <td>{{item.Variant}}</td>
-        <td>{{item.availability}}</td>
-      </tr>
-    </table>
+  <table>
+    <tr class="title-labrl">
+      <td><b>Product Name</b></td>
+      <td><b>Brand Name</b></td>
+      <td><b>Variant</b></td>
+      <td><b>Availability</b></td>
+      <td><b>Add To Cart</b></td>
+    </tr>
+    <tr *ngFor="#item of allProducts">
+      <td>{{item.productName}}</td>
+      <td>{{item.brand}}</td>
+      <td>{{item.Variant}}</td>
+      <td>{{item.availability}}</td>
+      <td>
+        <div *ngIf="item.availability == 'Yes'">
+          <button type='submit'
+                  class='qtyminus'
+                  (click)="item.quantity=item.quantity-1"
+                  [disabled]="item.quantity == 0">-</button>
+          <input type='number'
+                 [(ngModel)]="item.quantity"
+                 class='qty'>
+          <button type='submit'
+                  class='qtyplus'
+                  (click)="item.quantity=item.quantity+1">+</button>
+        </div>
+      </td>
+    </tr>
+  </table>
 </div>
+
+<div class="createOrderSection">
+
+</div>
+
+
+
