--- a/src/app/components/orderEntry/orderEntry.html
+++ b/src/app/components/orderEntry/orderEntry.html
@@ -10,7 +10,7 @@
       <td><b>Availability</b></td>
       <td><b>Add To Cart</b></td>
     </tr>
-    <tr *ngFor="#item of allProducts">
+    <tr *ngFor="#item of myOrders | async">
       <td>{{item.productName}}</td>
       <td>{{item.brand}}</td>
       <td>{{item.Variant}}</td>
