refactored left side navigation bar into seperate component

--- a/src/app/seed-app.html
+++ b/src/app/seed-app.html
@@ -1,20 +1,6 @@
 <div class="container">
   <oa-header>Header</oa-header>
-  <div class="left-sidebar">
-    <h2>Order App</h2>
-    <h3>Comfort Agencies</h3>
-    <img class="logo" src="app/images/logo.jpg">
-    <h3>Swapnil Kadam</h3>
-    <img src="app/images/profile.png">
-    <ul>
-      <li><a [routerLink]="['/MyOrders']">My Orders</a></li>
-      <li><a [routerLink]="['/UserAccount']">User Account</a></li>
-      <li><a [routerLink]="['/Notes']">Notes</a></li>
-      <li><a [routerLink]="['/Products']">Products</a></li>
-      <li><a [routerLink]="['/Customers']">Customers</a></li>
-      <li><a [routerLink]="['/LogOut']">Log Out</a></li>
-    </ul>
-  </div>
+  <oa-left-nav>Left Navigation</oa-left-nav>
   <div>
     <router-outlet></router-outlet>
   </div>
