--- a/src/app/inbox-app.html
+++ b/src/app/inbox-app.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <oa-header>Header</oa-header>
-  <oa-left-nav>Left Navigation</oa-left-nav>
+  <ib-header>Header</ib-header>
+  <ib-left-nav>Left Navigation</ib-left-nav>
   <div>
     <router-outlet></router-outlet>
   </div>
