refactored image folder into multiple image folders

--- a/src/app/inbox/components/myOrders.html
+++ b/src/app/inbox/components/myOrders.html
@@ -37,7 +37,7 @@
   </div>
 </div>
 
-<order-entry>Loading...</order-entry>
+<ib-create-order>Loading...</ib-create-order>
 
 <div class="createOrderSection">
 
