--- a/src/app/inbox/components/left-navigation.component.html
+++ b/src/app/inbox/components/left-navigation.component.html
@@ -5,7 +5,7 @@
   <h3>Swapnil Kadam</h3>
   <img src="app/share/images/profile.png">
   <ul>
-    <li><a [routerLink]="['/MyOrders']">My Orders</a></li>
+    <li><a [routerLink]="['/Inbox']">My Orders</a></li>
     <li><a [routerLink]="['/UserAccount']">User Account</a></li>
     <li><a [routerLink]="['/UserAccount']">Notes</a></li>
     <li><a [routerLink]="['/Products']">Products</a></li>
