--- a/src/app/inbox/components/header.component.html
+++ b/src/app/inbox/components/header.component.html
@@ -1,9 +1,9 @@
 <header  class="headerSection">
     <input type="search" name="googlesearch">
     <button type="submit">Search Orders</button>
-    <a [routerLink]="['/MyOrders']">My Orders</a>
-    <a [routerLink]="['/MyOrders']">Leads</a>
-    <a [routerLink]="['/MyOrders']">Dashboard</a>
-    <a [routerLink]="['/MyOrders']">History</a>
-    <a [routerLink]="['/MyOrders']">Settings</a>
+    <a [routerLink]="['/Inbox']">My Orders</a>
+    <a [routerLink]="['/Inbox']">Leads</a>
+    <a [routerLink]="['/Inbox']">Dashboard</a>
+    <a [routerLink]="['/Inbox']">History</a>
+    <a [routerLink]="['/Inbox']">Settings</a>
 </header>
