--- a/src/app/inbox/item-views/order-compact-view.html
+++ b/src/app/inbox/item-views/order-compact-view.html
@@ -1,7 +1,7 @@
 <div class="md-list-item-text" layout="column">
   <span (click)="displayDetails(item)">{{ order.companyName }}</span>
   <span>{{ order.orderDetails }}</span>
-  <span>{{ order.orderDate }}</span>
+  <span>{{ order.orderDate | date }}</span>
   <span>{{ order.orderType }}</span>
   <span>{{ order.status }}</span>
   <md-divider></md-divider>
