--- a/src/app/inbox/inbox.component.html
+++ b/src/app/inbox/inbox.component.html
@@ -18,26 +18,21 @@
           <ib-order-compact-view [order]="item" *ngIf="item.type == 'Order'"></ib-order-compact-view>
           <ib-email-compact-view [email]="item" *ngIf="item.type == 'Email'"></ib-email-compact-view>
           <ib-audio-compact-view [audioContent]="item" *ngIf="item.type == 'AudioContent'"></ib-audio-compact-view>
+          <md-divider></md-divider>
         </md-list-item>
-
       </md-list>
     </md-content>
   </div>
 
-  <div *ngIf="selectedItem">
-    <h2>{{selectedItem.companyName}} order details :</h2>
-    <div><label>Order type: </label>{{selectedItem.orderType}}</div>
-    <div>
-      <label>Order Details: </label> {{selectedItem.orderDetails}}
-    </div>
-  </div>
+  <!--<div *ngIf="selectedItem">-->
+    <!--<h2>{{selectedItem.companyName}} order details :</h2>-->
+    <!--<div><label>Order type: </label>{{selectedItem.orderType}}</div>-->
+    <!--<div>-->
+      <!--<label>Order Details: </label> {{selectedItem.orderDetails}}-->
+    <!--</div>-->
+  <!--</div>-->
 </div>
 
-<ib-create-order>Loading...</ib-create-order>
-
-<div class="createOrderSection">
-
-</div>
-
-
-
+<!--<ib-create-order>Loading...</ib-create-order>-->
+<!--<div class="createOrderSection">-->
+<!--</div>-->
