--- a/src/app/order/components/create-order.component.css
+++ b/src/app/order/components/create-order.component.css
@@ -1,11 +1,11 @@
-/*.tableClass{
+.tableClass{
   float: left;
   width: 40%;
   height: 500px;
   overflow-y: scroll;
 }
 
-.tableClass table {
+/*.tableClass table {
   width: 100%;
 }
 
