Commit after adding "Create Order" functionality with Create and Confirm button: Phase 2

--- a/src/app/inbox/inbox.component.html
+++ b/src/app/inbox/inbox.component.html
@@ -33,6 +33,8 @@
   <!--</div>-->
 </div>
 
-<!--<ib-create-order>Loading...</ib-create-order>-->
-<!--<div class="createOrderSection">-->
-<!--</div>-->
+<ib-create-order>Loading...</ib-create-order>
+
+<div class="createOrderSection">
+
+</div>
