--- a/src/app/inbox/inbox.component.css
+++ b/src/app/inbox/inbox.component.css
@@ -1,4 +1,4 @@
-.tableClass{
+/*.tableClass{
   float: left;
   width: 40%;
   height: 500px;
@@ -46,6 +46,6 @@
 }
 input.qtyplus { width:25px; height:25px;}
 input.qtyminus { width:25px; height:25px;}
-
+*/
 
 
