--- a/src/app/inbox/item-views/audio-compact-view.html
+++ b/src/app/inbox/item-views/audio-compact-view.html
@@ -1,5 +1,8 @@
-<div class="md-list-item-text" layout="column">
-  <span (click)="displayDetails(item)">{{ audioContent.from }}</span>
-  <span>{{ audioContent.date | date }}</span>
-  <span>{{ audioContent.subject }}</span>
-</div>
+<md-list-item class="md-3-line">
+  <img [src]="'app/share/images/company-logo/'+audioContent.fromCompany + '.png'" class="md-avatar" alt="{{audioContent.from}}"/>
+  <div class="md-list-item-text" layout="column">
+    <h3>{{ audioContent.subject }}</h3>
+    <h4>{{ audioContent.date | date }}</h4>
+    <p>{{ audioContent.from }}</p>
+  </div>
+</md-list-item>
