ui improvements for inbox, added model for task

--- a/src/app/inbox/item-views/email-compact-view.html
+++ b/src/app/inbox/item-views/email-compact-view.html
@@ -3,6 +3,10 @@
   <div class="md-list-item-text" layout="column">
     <h3>{{ email.subject }}</h3>
     <h4>{{ email.from }}</h4>
+    <p>{{ email.defaultTask.status }}</p>
     <p>{{ email.priority }}</p>
+    <p>{{ email.type }}</p>
+    <p>{{ email.defaultTask.assignedTo }}</p>
   </div>
+  <img [src]="'app/share/images/avtars/'+email.defaultTask.assignedTo + '.jpg'" class="md-avatar" alt="{{email.defaultTask.assignedTo}}"/>
 </md-list-item>
