--- a/src/app/inbox/item-views/audio-compact-view.html
+++ b/src/app/inbox/item-views/audio-compact-view.html
@@ -3,6 +3,10 @@
   <div class="md-list-item-text" layout="column">
     <h3>{{ audioContent.subject }}</h3>
     <h4>{{ audioContent.date | date }}</h4>
+    <p>{{ audioContent.defaultTask.status }}</p>
     <p>{{ audioContent.from }}</p>
+    <p>{{ audioContent.type }}</p>
+    <p>{{ audioContent.attachment}}</p>
   </div>
+  <img [src]="'app/share/images/avtars/'+audioContent.defaultTask.assignedTo + '.jpg'" class="md-avatar" alt="{{audioContent.defaultTask.assignedTo}}"/>
 </md-list-item>
