--- a/src/app/order/components/create-order.component.html
+++ b/src/app/order/components/create-order.component.html
@@ -54,7 +54,7 @@
         <td><input type='number'
                    [(ngModel)]="item.quantity"
                    class='qty'></td>
-        <td><button (click)="removeItem()">Remove</button></td>
+        <td><button (click)="removeItem(item)">Remove</button></td>
       </tr>
     </table>
   </div>
