--- a/src/app/order/components/create-order.component.css
+++ b/src/app/order/components/create-order.component.css
@@ -4,7 +4,20 @@
   height: 500px;
   overflow-y: scroll;
 }
-
+.qty {
+  width: 40px;
+  height: 27px;
+  text-align: center;
+  float:left;
+}
+.qtyminus,.qtyplus {
+    border: 0;
+    font-size: 19px;
+    line-height: 7px;
+    height: 16px;
+    width: 22px;
+    outline:none;
+}
 /*.tableClass table {
   width: 100%;
 }
