--- a/src/app/order/components/create-order.component.html
+++ b/src/app/order/components/create-order.component.html
@@ -81,7 +81,7 @@
 
 
 
-  <div class="tableClass" *ngIf="orderPreview == true && orderDetails.length > 0">
+  <div *ngIf="orderPreview == true && orderDetails.length > 0">
     <h3>Order Details: </h3>
     <h4>Company Name: Infosys</h4>
     <h4>Order assigned to: Chetan U.</h4>
