--- a/src/app/order/components/create-order.component.css
+++ b/src/app/order/components/create-order.component.css
@@ -1,9 +1,10 @@
-.tableClass{
-  float: left;
-  width: 40%;
-  height: 500px;
-  overflow-y: scroll;
-}
+/*.tableClass{*/
+  /*float: left;*/
+  /*width: 40%;*/
+  /*height: 500px;*/
+  /*overflow-y: scroll;*/
+/*}*/
+
 .qty {
   width: 40px;
   height: 27px;
