UI changes by Swapnil

--- a/src/app/inbox-app.html
+++ b/src/app/inbox-app.html
@@ -1,21 +1,21 @@
-<div layout="column">
-  <md-sidenav-container layout="row" flex>
+<div layout="row">
+  <md-sidenav-container layout="row" flex="20">
     <md-sidenav name="left" [style]="hasMedia('gt-sm') ? 'side' : 'over'">
       <md-content layout-padding>
         <ib-left-nav>Left Navigation</ib-left-nav>
       </md-content>
     </md-sidenav>
-    <div flex >
-      <md-toolbar>
-        <div class="md-toolbar-tools">
-          <ib-header>Header</ib-header>
-        </div>
-      </md-toolbar>
-      <md-content flex layout-padding>
-        <div layout="column" layout-fill layout-align="top center">
-          <router-outlet></router-outlet>
-        </div>
-      </md-content>
-    </div>
   </md-sidenav-container>
+  <div flex >
+    <md-toolbar>
+      <div class="md-toolbar-tools">
+        <ib-header>Header</ib-header>
+      </div>
+    </md-toolbar>
+    <md-content flex layout-padding>
+      <div layout="column" layout-fill layout-align="top center">
+        <router-outlet></router-outlet>
+      </div>
+    </md-content>
+  </div>
 </div>
