--- a/src/app/inbox/inbox.component.html
+++ b/src/app/inbox/inbox.component.html
@@ -1,4 +1,4 @@
-<div layout="row" layout-fill layout-align="top center">
+<div layout="row" layout-fill layout-align="top center" flex>
 
   <md-content>
     <div> Sort By:
@@ -20,5 +20,5 @@
       </div>
     </md-list>
   </md-content>
-  <ib-create-order>Loading...</ib-create-order>
+  <ib-create-order flex>Loading...</ib-create-order>
 </div>
